--- a/client/stylesheets/pages/dash.sass
+++ b/client/stylesheets/pages/dash.sass
@@ -1,7 +1,8 @@
 .dash
+    margin-top: 80px
     background-color: $light-grey
     width: 100%
-    min-height: 100vh
+    min-height: 800px
     display: flex
     flex-direction: column
     position: relative
