--- a/client/stylesheets/components/input.sass
+++ b/client/stylesheets/components/input.sass
@@ -3,7 +3,13 @@ input:focus::-webkit-input-placeholder
 input::-webkit-input-placeholder
 	opacity: 0.6
 
-.search-input
+.input-container
+	display: flex
+	flex-direction: column
+	align-items: flex-start
+	justify-content: space-between
+
+.input
 	@include text(14px, 500, #000)
 	padding-left: 10px
 	padding-right: 10px
