--- a/client/stylesheets/layout/navigation.sass
+++ b/client/stylesheets/layout/navigation.sass
@@ -1,6 +1,10 @@
 .nav
-    width: 100%
-    height: 60px
+    position: fixed
+    top: 0
+    z-index: 1
+    background-color: $light-grey
+    width: 1280px
+    height: 80px
     display: flex
     flex-direction: row
     align-items: center
