--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -142,7 +142,13 @@ input:focus::-webkit-input-placeholder {
 input::-webkit-input-placeholder {
   opacity: 0.6; }
 
-.search-input {
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between; }
+
+.input {
   font-size: 14px;
   font-weight: 500;
   color: #000;
@@ -175,8 +181,12 @@ button {
     color: white; }
 
 .nav {
-  width: 100%;
-  height: 60px;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  background-color: #f7f7f7;
+  width: 1280px;
+  height: 80px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -232,9 +242,10 @@ button {
   width: 110px; }
 
 .dash {
+  margin-top: 80px;
   background-color: #f7f7f7;
   width: 100%;
-  min-height: 100vh;
+  min-height: 800px;
   display: flex;
   flex-direction: column;
   position: relative; }
@@ -269,11 +280,13 @@ a {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  overflow: hidden; }
 
 .container {
   width: 1280px;
-  height: auto; }
+  height: auto;
+  overflow: hidden; }
 
 .animated-page-wrapper {
   position: absolute;
