--- a/client/stylesheets/main.sass
+++ b/client/stylesheets/main.sass
@@ -31,11 +31,13 @@ a
 	display: flex
 	flex-direction: column
 	align-items: center
+	overflow: hidden
 
 
 .container
 	width: 1280px
 	height: auto
+	overflow: hidden
 
 .animated-page-wrapper
 	position: absolute
