image upload preview / edit mode / etc

--- a/client/stylesheets/components/input.sass
+++ b/client/stylesheets/components/input.sass
@@ -8,6 +8,8 @@ input::-webkit-input-placeholder
 	flex-direction: column
 	align-items: flex-start
 	justify-content: space-between
+	min-width: 500px
+	overflow: hidden
 
 .input
 	@include text(14px, 500, #000)
@@ -16,3 +18,14 @@ input::-webkit-input-placeholder
 	outline: none
 	width: 320px
 	height: 35px
+
+.dropdown
+	min-width: 400px
+	display: flex
+	flex-direction: row
+	justify-content: space-between
+	align-items: center
+	padding-top: 30px
+
+
+
