--- a/client/stylesheets/main.sass
+++ b/client/stylesheets/main.sass
@@ -7,7 +7,7 @@
 @import	'abstracts/variables.sass', 'abstracts/mixins'
 
 //components
-@import	'components/input', 'components/buttons'
+@import	'components/input', 'components/buttons', 'components/modal'
 
 //layout
 @import	'layout/forms', 'layout/navigation', 'layout/table'
