modal polished & table / action icons and actual actions lol / etc

--- a/client/stylesheets/abstracts/variables.sass
+++ b/client/stylesheets/abstracts/variables.sass
@@ -2,6 +2,8 @@
 
 $pale-grey3: #f6f7f8
 $light-grey: #f7f7f7
+$medium-grey: #a0a0a0
+$dark-grey: #383838
 
 //blues
 $azure: #19aaf0
@@ -19,6 +21,7 @@ $bluish-green: #46cdcf
 //reds
 $error: #ff878f
 $error-light: #FFCCCC
+$dark-red: #e84d47
 
 
 //breakpoints
