--- a/client/stylesheets/layout/forms.sass
+++ b/client/stylesheets/layout/forms.sass
@@ -10,8 +10,9 @@
 
 
     select
-        width: 60px
-        height: 30px
+        @include text(14px, 500, $dark-grey)
+        width: 80px
+        height: 40px
         outline: none
 
 .img-form-container
