--- a/client/stylesheets/layout/table.sass
+++ b/client/stylesheets/layout/table.sass
@@ -1,7 +1,9 @@
-.table-container
+.actions-cell
     width: 100%
-    min-height: 350px
-    background-color: black
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-around
 
 .rt-table
     background-color: transparent !important
@@ -37,3 +39,6 @@
 
 .-previous
     width: 110px
+
+.rt-resizable-header-content
+    font-weight: 600
