--- a/client/stylesheets/main.sass
+++ b/client/stylesheets/main.sass
@@ -28,16 +28,17 @@ a
 	background-color: $light-grey
 	width: 100%
 	min-height: 100vh
+	height: auto
 	display: flex
 	flex-direction: column
 	align-items: center
-	overflow: hidden
+
 
 
 .container
 	width: 1280px
 	height: auto
-	overflow: hidden
+
 
 .animated-page-wrapper
 	position: absolute
