--- a/client/stylesheets/pages/dash.sass
+++ b/client/stylesheets/pages/dash.sass
@@ -2,7 +2,8 @@
     margin-top: 80px
     background-color: $light-grey
     width: 100%
-    min-height: 800px
+    min-height: 100vh
+    hegiht: auto
     display: flex
     flex-direction: column
     position: relative
