--- a/client/stylesheets/components/input.sass
+++ b/client/stylesheets/components/input.sass
@@ -8,7 +8,8 @@ input::-webkit-input-placeholder
 	flex-direction: column
 	align-items: flex-start
 	justify-content: space-between
-	min-width: 500px
+	min-width: 150px
+	width: 100%
 	overflow: hidden
 
 .input
@@ -16,15 +17,16 @@ input::-webkit-input-placeholder
 	padding-left: 10px
 	padding-right: 10px
 	outline: none
-	width: 320px
+	min-width: 320px
 	height: 35px
 
 .dropdown
-	min-width: 400px
+	width: auto
 	display: flex
 	flex-direction: row
 	justify-content: space-between
 	align-items: center
+	width: 370px
 	padding-top: 30px
 
 
