--- a/client/stylesheets/components/modal.sass
+++ b/client/stylesheets/components/modal.sass
@@ -11,10 +11,14 @@
 
 
 .modal-head
+    @include text(16px, 600, $dark-grey)
     width: 100%
     height: 60px
     background-color: white
     border-bottom: 0.5px solid rgba(0, 0, 0, .5)
+    display: flex
+    align-items: center
+    justify-content: center
 
 .modal-btn-container
     width: 100%
@@ -24,3 +28,12 @@
     display: flex
     flex-direction: row
     justify-content: space-between
+    align-items: center
+
+.coord-container
+    margin-top: 20px
+    width: 100%
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
