--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -147,7 +147,8 @@ input::-webkit-input-placeholder {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  min-width: 500px;
+  min-width: 150px;
+  width: 100%;
   overflow: hidden; }
 
 .input {
@@ -157,15 +158,16 @@ input::-webkit-input-placeholder {
   padding-left: 10px;
   padding-right: 10px;
   outline: none;
-  width: 320px;
+  min-width: 320px;
   height: 35px; }
 
 .dropdown {
-  min-width: 400px;
+  width: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 370px;
   padding-top: 30px; }
 
 button {
@@ -190,6 +192,49 @@ button {
     background-color: #46cdcf;
     color: white; }
 
+.modal-btn, .modal-btn-cancel {
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+  width: 150px;
+  height: 50px;
+  background-color: #46cdcf;
+  outline: none;
+  border: none;
+  transition: all 0.2s ease;
+  color: white;
+  font-weight: 600;
+  margin-left: 0;
+  margin-right: 45px; }
+  .modal-btn:hover, .modal-btn-cancel:hover {
+    background-color: #2fb2b3; }
+
+.modal-btn-cancel {
+  background-color: #a0a0a0;
+  margin-right: 0;
+  margin-left: 45px; }
+  .modal-btn-cancel:hover {
+    background-color: #878787; }
+
+.action-btn-del, .action-btn-edit {
+  width: 30px;
+  height: 30px;
+  outline: none !important;
+  border: none;
+  background-color: #e84d47;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease; }
+  .action-btn-del:hover, .action-btn-edit:hover {
+    background-color: #ff545f; }
+
+.action-btn-edit {
+  background-color: #28cd69; }
+  .action-btn-edit:hover {
+    background-color: #20a253; }
+
 .rodal-dialog {
   padding: 0 !important; }
 
@@ -202,10 +247,16 @@ button {
   height: 100%; }
 
 .modal-head {
+  font-size: 16px;
+  font-weight: 600;
+  color: #383838;
   width: 100%;
   height: 60px;
   background-color: white;
-  border-bottom: 0.5px solid rgba(0, 0, 0, 0.5); }
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 .modal-btn-container {
   width: 100%;
@@ -214,7 +265,16 @@ button {
   border-top: 0.5px solid rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: row;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: center; }
+
+.coord-container {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center; }
 
 .form {
   width: 90%;
@@ -226,8 +286,11 @@ button {
   align-items: left;
   height: auto; }
   .form select {
-    width: 60px;
-    height: 30px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #383838;
+    width: 80px;
+    height: 40px;
     outline: none; }
 
 .img-form-container {
@@ -266,10 +329,12 @@ button {
   align-items: center;
   justify-content: space-between; }
 
-.table-container {
+.actions-cell {
   width: 100%;
-  min-height: 350px;
-  background-color: black; }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around; }
 
 .rt-table {
   background-color: transparent !important;
@@ -306,11 +371,15 @@ button {
 .-previous {
   width: 110px; }
 
+.rt-resizable-header-content {
+  font-weight: 600; }
+
 .dash {
   margin-top: 80px;
   background-color: #f7f7f7;
   width: 100%;
-  min-height: 800px;
+  min-height: 100vh;
+  hegiht: auto;
   display: flex;
   flex-direction: column;
   position: relative; }
@@ -343,15 +412,14 @@ a {
   background-color: #f7f7f7;
   width: 100%;
   min-height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  overflow: hidden; }
+  align-items: center; }
 
 .container {
   width: 1280px;
-  height: auto;
-  overflow: hidden; }
+  height: auto; }
 
 .animated-page-wrapper {
   position: absolute;
