--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -169,6 +169,10 @@ input::-webkit-input-placeholder {
   align-items: center;
   width: 370px;
   padding-top: 30px; }
+  .dropdown span {
+    font-size: 14px;
+    font-weight: 600;
+    color: #383838; }
 
 button {
   outline: none !important;
@@ -295,7 +299,7 @@ button {
 
 .img-form-container {
   width: 100%;
-  height: 240px;
+  height: 180px;
   display: flex;
   align-items: center;
   justify-content: center;
